# nu_plugin_todu

./: Cargo.toml  README.md
crates/nu-plugin-todu/: Cargo.toml
crates/nu-plugin-todu/src/: main.rs
crates/todu-db/: Cargo.toml
crates/todu-db/src/: lib.rs  priority.rs  remote.rs  row.rs  source.rs  status.rs
crates/todu-plugin/: Cargo.toml
crates/todu-plugin/src/: config.rs  lib.rs  parse.rs  remote.rs
crates/todu-plugin/src/commands/: add.rs  branch.rs  clear.rs  edit.rs  get.rs  list.rs  mod.rs  move.rs  priority.rs  pull.rs  remote.rs  rm.rs  status.rs
